--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.14",
     "json-server": "^0.16.3",
     "typescript": "^4.3.5"
   }
