--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.14",
+    "@types/react-router-dom": "^5.1.8",
     "json-server": "^0.16.3",
     "typescript": "^4.3.5"
   }
