--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
